--- a/css/style.css
+++ b/css/style.css
@@ -78,4 +78,98 @@ header .btns.active ion-icon:nth-child(2) {
 
 .home {
     position: relative;
+    width: 100;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100;
+    height: 100%;
+    object-fit: cover;
+    transition: ease-in-out 0.5s;
+}
+
+.mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    mix-blend-mode: screen;
+    user-select: none;
+
+
+}
+
+.dark .mask {
+    filter: invert(1);
+    mix-blend-mode: multiply;
+}
+
+.main h2 {
+    position: relative;
+    z-index: 2;
+    color: #fff;
+    font-size: 16vw;
+    text-shadow: 0 20px 30 rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+}
+
+.navigation {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: var(--white);
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: 0.5s;
+}
+
+.navigation.active {
+    left: 0;
+}
+
+.navigation li {
+    display: inline-flex;
+    margin: 5px 0;
+    font-size: 1.35em;
+    text-decoration: none;
+    color: var(--black);
+    padding: 5px 20px;
+    border-radius: 40px;
+    transition: ease-in-out 0.3s;
+}
+
+.navigation li a:hover {
+    background: var(--black);
+    color: var(--white);
+}
+
+.social {
+    position: absolute;
+    bottom: 30px;
+    right: 100px;
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
+}
+
+.social li {
+    list-style: none;
+}
+
+.social li a {
+    text-decoration: none;
 }
