--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ header .btns.active ion-icon:nth-child(2) {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     transition: ease-in-out 0.5s;
@@ -113,10 +113,12 @@ header .btns.active ion-icon:nth-child(2) {
     mix-blend-mode: multiply;
 }
 
-.main h2 {
+.home h2 {
     position: relative;
     z-index: 2;
-    color: #fff;
+    color: #ffffff;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
     font-size: 16vw;
     text-shadow: 0 20px 30 rgba(0, 0, 0, 0.2);
     text-transform: uppercase;
@@ -135,13 +137,14 @@ header .btns.active ion-icon:nth-child(2) {
     align-items: center;
     flex-direction: column;
     transition: 0.5s;
+
 }
 
 .navigation.active {
     left: 0;
 }
 
-.navigation li {
+.navigation li a {
     display: inline-flex;
     margin: 5px 0;
     font-size: 1.35em;
@@ -175,6 +178,7 @@ header .btns.active ion-icon:nth-child(2) {
     color: var(--black);
     font-size: 1.75em;
     transition: 0.5s;
+
 }
 
 .text {
@@ -185,5 +189,22 @@ header .btns.active ion-icon:nth-child(2) {
     font-weight: 500;
     font-size: 1.2em;
     color: var(--black);
+
+}
+
+
+@media (max-width:767px) {
+    header {
+        padding: 20px;
+    }
+
+    .text {
+        left: 20px;
+    }
+
+    .social {
+        right: 20px;
+        bottom: 20px;
+    }
 
 }
